--- a/style.css
+++ b/style.css
@@ -28,16 +28,17 @@ h4 {
     height: 100vh;
     width: 100%;
     background-image: url(Untitled\ design\ \(1\).png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
-    background-color: rgb(14, 14, 14);
+    background-color: rgb(0, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #center {
     color: white;
     text-align: center;
-    padding: 50px;
+    padding: 20px;
 }
 
  #center h1{ 
@@ -64,6 +65,6 @@ button {
     font-size: 20px;
     font-weight: 200;
     background-color: rgb(40, 110, 223);
-    padding: 13px 20px;
+    padding: 10px 20px;
     border: none;
 }
